# 4-el

./: .gitignore  pyproject.toml
backend/: demo.db
backend/src/: agent.py  api.py  demo_db.py  tools.py
backend/src/stores/: incidents.py  need_cards.py
frontend/src/: App.jsx
frontend/src/components/: ToastProvider.jsx
frontend/src/hooks/: usePolling.js
frontend/src/layouts/: AdminLayout.jsx
frontend/src/pages/: AdminDashboard.jsx  AdminLogin.jsx  PublicDashboard.jsx
frontend/src/services/: api.js
src/: agent.py  allocator_config.py  api.py  tools.py
